regulatory-health-compliance/security.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "strict-mtls-policy"
  namespace: "regulatory-health-compliance"
spec:
  mtls:
    mode: STRICT
