regulatory-health-compliance/alerts.yaml
##################################################################################################
# alerts service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: alerts
  labels:
    app: alerts
    service: alerts
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: alerts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alerts-v1
  labels:
    app: alerts
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alerts
      version: v1
  template:
    metadata:
      labels:
        app: alerts
        version: v1
    spec:
      serviceAccountName: medisupply-alerts

      containers:
        - name: alerts
          image: public.ecr.aws/q2b4w2e6/dummies/alerta-ms:1.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
