regulatory-health-compliance/regulations.yaml
##################################################################################################
# regulations service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: regulations
  labels:
    app: regulations
    service: regulations
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: regulations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regulations-v1
  labels:
    app: regulations
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regulations
      version: v1
  template:
    metadata:
      labels:
        app: regulations
        version: v1
    spec:
      serviceAccountName: medisupply-regulations

      containers:
        - name: regulations
          image: public.ecr.aws/q2b4w2e6/dummies/normativa-ms:1.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
