regulatory-health-compliance/dynamodb-external.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: alert-db-and-regulation-db
spec:
  hosts:
    - dynamodb.us-east-1.amazonaws.com
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "*"
